// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-cursor #render should render as expected (1) 1`] = `
<gux-pagination-cursor>
  <mock:shadow-root>
    <div class="gux-pagination-button-container" role="navigation">
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" disabled="" type="button">
          <gux-icon iconname="chevron-small-left" screenreader-text="Previous"></gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" disabled="" type="button">
          <gux-icon iconname="chevron-small-right" screenreader-text="Next"></gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </mock:shadow-root>
</gux-pagination-cursor>
`;

exports[`gux-pagination-cursor #render should render as expected (2) 1`] = `
<gux-pagination-cursor has-next="">
  <mock:shadow-root>
    <div class="gux-pagination-button-container" role="navigation">
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" disabled="" type="button">
          <gux-icon iconname="chevron-small-left" screenreader-text="Previous"></gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button">
          <gux-icon iconname="chevron-small-right" screenreader-text="Next"></gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </mock:shadow-root>
</gux-pagination-cursor>
`;

exports[`gux-pagination-cursor #render should render as expected (3) 1`] = `
<gux-pagination-cursor has-next="" has-previous="">
  <mock:shadow-root>
    <div class="gux-pagination-button-container" role="navigation">
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button">
          <gux-icon iconname="chevron-small-left" screenreader-text="Previous"></gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button">
          <gux-icon iconname="chevron-small-right" screenreader-text="Next"></gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </mock:shadow-root>
</gux-pagination-cursor>
`;

exports[`gux-pagination-cursor #render should render as expected (4) 1`] = `
<gux-pagination-cursor has-previous="">
  <mock:shadow-root>
    <div class="gux-pagination-button-container" role="navigation">
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button">
          <gux-icon iconname="chevron-small-left" screenreader-text="Previous"></gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" disabled="" type="button">
          <gux-icon iconname="chevron-small-right" screenreader-text="Next"></gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </mock:shadow-root>
</gux-pagination-cursor>
`;

exports[`gux-pagination-cursor #render should render as expected (5) 1`] = `
<gux-pagination-cursor layout="advanced">
  <mock:shadow-root>
    <div class="gux-pagination-button-container" role="navigation">
      <gux-button-slot accent="ghost">
        <button disabled="" type="button">
          <div class="gux-button-align-content">
            <gux-icon decorative="" iconname="chevron-small-left"></gux-icon>
            <span>
              Previous
            </span>
          </div>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button disabled="" type="button">
          <div class="gux-button-align-content">
            <span>
              Next
            </span>
            <gux-icon decorative="" iconname="chevron-small-right"></gux-icon>
          </div>
        </button>
      </gux-button-slot>
    </div>
  </mock:shadow-root>
</gux-pagination-cursor>
`;
